<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="playVsHuman">vs Human</string>
<string name="playVsCpu">vs CPU</string>
<string name="game_mode_sudoku">Sudoku-Like</string>
<string name="game_mode_classic">Classic</string>

<string name="menu_new">New game</string>
<string name="menu_undo">Undo last move</string>
<string name="menu_settings">Settings</string>
<string name="menu_help">Instructions</string>
<string name="menu_about">About</string>
<string name="menu_suggest">Suggest move</string>
<string name="menu_exit">Exit</string>



<string name="player1_win">Player 1 wins!</string>
<string name="player2_win">Player 2 wins!</string>
<string name="noone_win">Noone wins...</string>
<string name="new_game">New game</string>
<string name="close_dialog">Close</string>
<string name="settings">Settings</string>
<string name="size">Size</string>
<string name="size_summary">Choose the grid\'s size</string>
<string name="game_mode">Game mode</string>
<string name="game_mode_summary">Choose the game mode</string>
<string name="app_name">Close to Zero</string>
<string name="vs_cpu">vs CPU</string>
<string name="vs_cpu_summary">Second player is controlled by CPU</string>
<string name="partial_sum">Show partial sum</string>
<string name="partial_sum_summary">Display a row and a col with partial sums</string>
<string name="help">Instructions</string>
<string name="help_content">The goal of the game is to keep the sum of your rows and columns as close as possible to zero. At every turn, you must enter a number in a free cell. In Classic mode you can\'t enter the same number in two adjacent cells. In Sudoku-Like mode you can\'t enter the same number more then once in a row or column. The cells marked with the symbol "-" subtract the number, those with the "+" sum it. The total of each row and column corresponds to the distance from 0. Whoever has the minimum score once filled the grid wins.</string>
<string name="about">About</string>
<string name="loading">Loading, please wait...</string>
<string name="human">Human</string>
<string name="cpu">CPU</string>
<string name="p1">Player 1</string>
<string name="p1_summary">Set-up Player 1</string>
<string name="p2">Player 2</string>
<string name="p2_summary">Set-up Player 2</string>
<string name="player_type">Type</string>
<string name="player_type_summary">Choose between human and CPU</string>
<string name="player_color">Color</string>
<string name="player_color_summary">Choose the color for the player</string>
<string name="cpu_level">CPU level</string>
<string name="cpu_level_summary">Choose how much smart is the CPU</string>
<string name="thinking">Thinking...</string>
<string name="vibration">Haptic feedback</string>
<string name="vibration_summary">Haptic feedback for moves</string>
<string name="undo_error">No moves to undo</string>
<string name="no_moves_available">No moves available</string>
</resources>
