<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
  
	<ListPreference
		android:title="@string/size"
		android:summary="@string/size_summary"
		android:key="size"
		android:defaultValue="6"
		android:entries="@array/list_sizes"
		android:entryValues="@array/list_sizes_val" />
 
	<ListPreference
		android:title="@string/p1"
		android:summary="@string/p1_summary"
		android:key="p1Cpu"
		android:defaultValue="human"
		android:entries="@array/list_player_type"
		android:entryValues="@array/list_player_type_val" />
		
	<ListPreference
		android:title="@string/p2"
		android:summary="@string/p2_summary"
		android:key="p2Cpu"
		android:defaultValue="human"
		android:entries="@array/list_player_type"
		android:entryValues="@array/list_player_type_val" />
		
	<CheckBoxPreference
		android:title="@string/partial_sum"
		android:defaultValue="true"
		android:summary="@string/partial_sum_summary"
		android:key="partialSum" />
	
</PreferenceScreen>
